Updated project description

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:mkrzero]
+[env]
 platform = atmelsam
 board = mkrzero
 framework = arduino
 lib_deps = arduino-libraries/Arduino_MKRENV@^1.2.1
+
+[platformio]
+description = Arduino MKR Zero based Garage Door Controller
+default_envs = mkrzero-release
+
+[env:mkrzero-debug]
+build_type = debug
+
+[env:mkrzero-release]
+build_type = release
