Added Ethernet and MQTT libs

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,12 @@ default_envs = mkrzero-release
 
 [env:mkrzero-debug]
 build_type = debug
+lib_deps = 
+	arduino-libraries/Ethernet@^2.0.0
+	arduino-libraries/ArduinoMqttClient@^0.1.5
 
 [env:mkrzero-release]
 build_type = release
+lib_deps = 
+	arduino-libraries/Ethernet@^2.0.0
+	arduino-libraries/ArduinoMqttClient@^0.1.5
