--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelsam
 board = mkrzero
 framework = arduino
-lib_deps = arduino-libraries/Arduino_MKRENV@^1.2.1
+lib_deps = 
 
 [platformio]
 description = Arduino MKR Zero based Garage Door Controller
@@ -23,9 +23,11 @@ build_type = debug
 lib_deps = 
 	arduino-libraries/Ethernet@^2.0.0
 	arduino-libraries/ArduinoMqttClient@^0.1.5
+	arduino-libraries/Arduino_MKRENV@^1.2.1
 
 [env:mkrzero-release]
 build_type = release
 lib_deps = 
 	arduino-libraries/Ethernet@^2.0.0
 	arduino-libraries/ArduinoMqttClient@^0.1.5
+	arduino-libraries/Arduino_MKRENV@^1.2.1
