Fixed upload and monitor task

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,14 +20,25 @@ default_envs = mkrzero-release
 
 [env:mkrzero-debug]
 build_type = debug
+upload_port = /dev/cu.usbmodem101
+upload_speed = 9600
+monitor_port = /dev/cu.usbmodem101
+extra_scripts = post:delay_serial_monitor.py
 lib_deps = 
 	arduino-libraries/Ethernet@^2.0.0
-	arduino-libraries/ArduinoMqttClient@^0.1.5
 	arduino-libraries/Arduino_MKRENV@^1.2.1
+	hideakitai/MQTTPubSubClient@^0.1.2
 
 [env:mkrzero-release]
 build_type = release
+upload_port = /dev/cu.usbmodem101
+upload_speed = 9600
+monitor_port = /dev/cu.usbmodem101
+monitor_dtr = 0
+monitor_rts = 0
+extra_scripts = post:delay_serial_monitor.py
 lib_deps = 
 	arduino-libraries/Ethernet@^2.0.0
 	arduino-libraries/ArduinoMqttClient@^0.1.5
 	arduino-libraries/Arduino_MKRENV@^1.2.1
+	hideakitai/MQTTPubSubClient@^0.1.2
