Added Ethernet configuration

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,7 @@ lib_deps =
 	arduino-libraries/Ethernet@^2.0.0
 	arduino-libraries/Arduino_MKRENV@^1.2.1
 	hideakitai/MQTTPubSubClient@^0.1.2
+	javos65/WDTZero@^1.3.0
 
 [env:mkrzero-release]
 build_type = release
@@ -42,3 +43,4 @@ lib_deps =
 	arduino-libraries/ArduinoMqttClient@^0.1.5
 	arduino-libraries/Arduino_MKRENV@^1.2.1
 	hideakitai/MQTTPubSubClient@^0.1.2
+	javos65/WDTZero@^1.3.0
