--- a/platformio.ini
+++ b/platformio.ini
@@ -29,6 +29,7 @@ lib_deps =
 	arduino-libraries/Arduino_MKRENV@^1.2.1
 	hideakitai/MQTTPubSubClient@^0.1.2
 	javos65/WDTZero@^1.3.0
+	bblanchon/ArduinoJson@^6.18.5
 
 [env:mkrzero-release]
 build_type = release
@@ -44,3 +45,4 @@ lib_deps =
 	arduino-libraries/Arduino_MKRENV@^1.2.1
 	hideakitai/MQTTPubSubClient@^0.1.2
 	javos65/WDTZero@^1.3.0
+	bblanchon/ArduinoJson@^6.18.5
