--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,8 @@ lib_deps =
 	hideakitai/MQTTPubSubClient@^0.1.2
 	javos65/WDTZero@^1.3.0
 	bblanchon/ArduinoJson@^6.18.5
+	olikraus/U8g2@^2.32.7
+	adafruit/Adafruit MCP23008 library@^2.1.0
 
 [env:mkrzero-release]
 build_type = release
@@ -46,3 +48,5 @@ lib_deps =
 	hideakitai/MQTTPubSubClient@^0.1.2
 	javos65/WDTZero@^1.3.0
 	bblanchon/ArduinoJson@^6.18.5
+	olikraus/U8g2@^2.32.7
+	adafruit/Adafruit MCP23008 library@^2.1.0
